--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vimfiles/bundle/vim-commentary"]
 	path = vimfiles/bundle/vim-commentary
 	url = https://github.com/tpope/vim-commentary.git
+[submodule "vimfiles/bundle/vim-vinegar"]
+	path = vimfiles/bundle/vim-vinegar
+	url = https://github.com/tpope/vim-vinegar.git
