--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,6 @@
 [submodule "vimfiles/bundle/tagbar"]
 	path = vimfiles/bundle/tagbar
 	url = https://github.com/majutsushi/tagbar.git
+[submodule "vimfiles/bundle/PHP-Indenting-for-VIm"]
+	path = vimfiles/bundle/PHP-Indenting-for-VIm
+	url = https://github.com/2072/PHP-Indenting-for-VIm.git
