--- a/.gitmodules
+++ b/.gitmodules
@@ -60,3 +60,6 @@
 [submodule "vimfiles/bundle/PHP-Indenting-for-VIm"]
 	path = vimfiles/bundle/PHP-Indenting-for-VIm
 	url = https://github.com/2072/PHP-Indenting-for-VIm.git
+[submodule "vimfiles/bundle/vim-lucius"]
+	path = vimfiles/bundle/vim-lucius
+	url = https://github.com/jonathanfilip/vim-lucius.git
