--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -12,7 +12,7 @@ set! ui.caretWidth=4
 
 "
 style! -name=commandline-ime chrome://* #liberator-commandline-command input {ime-mode: inactive;}
-highlight Hint font-size:120%;text-transform:uppercase;color:blue;background-color:#aaccff;border-color:blue;border-width:1px;border-style:solid;padding:0 2px;z-index: 2147483647;
+highlight Hint word-break:normal;word-wrap:normal;font-size:120%;text-transform:uppercase;color:blue;background-color:#aaccff;border-color:blue;border-width:1px;border-style:solid;padding:0 2px;z-index: 2147483647;
 
 noremap <C-a> i<C-a>
 inoremap <C-a> <insert><C-a><insert>
