--- a/.gitconfig
+++ b/.gitconfig
@@ -9,11 +9,12 @@
 [push]
 	default = simple
 [merge]
-	tool = gvimdiff -f
+	tool = gvimdiff
 [color "branch"]
 	upstream = cyan
 [alias]
-	ll = log --pretty=format:'%C(yellow)%h %cd %C(red)%d%Creset %s' --date=short --graph
+	ll = log --pretty=format:'%C(yellow)%h %cd %C(red)%d%Creset %s' --date=short
+	lg = log --pretty=format:'%C(yellow)%h %cd %C(red)%d%Creset %s' --date=short --graph
 	ld = log -5 --pretty=format:'%C(yellow)%h%C(cyan)[%ci]%C(red)%d%Creset by %cn%n%s' --numstat
 	sd = show --pretty=format:'%C(yellow)%h%C(cyan)[%ci]%C(red)%d%Creset by %cn%n%s' --numstat
 	sta = status --short --branch
