Ime and local conf for vim

--- a/.vimrc.constants.local.template
+++ b/.vimrc.constants.local.template
@@ -5,8 +5,10 @@
 "--------------------------------- vim用 ------------------------------------
 "Path.
 " let g:vimrc_local_path_notes = 'd:\dwh\notes'
+" let g:vimrc_local_path_notes = '~/notes'
 
 "--------------------------------- gvim用 -----------------------------------
 "Window placement.
-" let g:gvimrc_local_init_placement = [800, 10, 50, 100]
-" let g:gvimrc_local_sbs_placement = [220, 10, 49, 200]
+let g:gvimrc_local_init_placement = [800, 10, 40, 100]
+let g:gvimrc_local_sbs_placement = [220, 10, 40, 180]
+
