--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "vimfiles/bundle/vim-projectionist"]
 	path = vimfiles/bundle/vim-projectionist
 	url = https://github.com/tpope/vim-projectionist.git
+[submodule "vimfiles/bundle/vim-abolish"]
+	path = vimfiles/bundle/vim-abolish
+	url = git://github.com/tpope/vim-abolish.git
