--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,16 +3,28 @@ unbind-key C-b
 set-option -g prefix C-k
 bind-key C-k send-prefix
 
-#
+# Various options
 setw -g mode-keys vi
+set-option -g set-titles on
+set-option -g set-titles-string "tmux@#h[#S:#I:#P] #T"
+#set-option -g base-index 1
+set -g status-interval 59
+#set-option -g status-position top
+set-option -g message-bg
+
+# Copy mode(need `xclip` installed)
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Reload config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; display "Config sourced!"
 
 # Tabs(Windows)
 unbind c
 bind t new-window
 
+# Panes
 unbind '"'
 unbind %
 bind v split-window -h
@@ -31,7 +43,6 @@ bind < resize-pane -L
 
 
 # COLOR THEME -----------------------------------
-set -g status-interval 1
 set -g status-fg colour240
 set -g status-bg colour233
 set -g status-left-bg colour233
@@ -59,7 +70,7 @@ set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour24
 set -g clock-mode-style 24
 set -g message-bg colour24
-set -g message-fg black
+set -g message-fg white
 set -g message-command-bg colour233
 set -g message-command-fg black
 set -g mode-bg colour24
