--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,6 @@ set-option -g set-titles-string "tmux@#h[#S:#I:#P] #T"
 #set-option -g base-index 1
 set -g status-interval 59
 #set-option -g status-position top
-set-option -g message-bg
 
 # Copy mode(need `xclip` installed)
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -18,7 +17,7 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Reload config
-bind r source-file ~/.tmux.conf; display "Config sourced!"
+bind r source-file ~/.tmux.conf \; display "Config sourced!"
 
 # Tabs(Windows)
 unbind c
