Fix color for tmux status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,7 @@ set -g status-bg colour233
 set -g status-left-bg colour233
 set -g status-left-fg colour243
 set -g status-left-length 40
-set -g status-left "#[fg=colour232,bg=colour24,bold] S#S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] P#P #[fg=colour240,bg=colour233]"
+set -g status-left "#[fg=colour232,bg=colour24,bold] S:#S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] P:#P #[fg=colour240,bg=colour233]"
 set -g status-right-bg colour233
 set -g status-right-fg colour243
 set -g status-right-length 150
