--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ bind-key C-k send-prefix
 # Various options
 setw -g mode-keys vi
 set-option -g set-titles on
-set-option -g set-titles-string "tmux@#h[#S:#I:#P] #T"
-#set-option -g base-index 1
+set-option -g set-titles-string "tmux@#h[#S] #I:#W"
+set-option -g base-index 1
 set -g status-interval 59
 #set-option -g status-position top
 
@@ -47,15 +47,16 @@ set -g status-bg colour233
 set -g status-left-bg colour233
 set -g status-left-fg colour243
 set -g status-left-length 40
-set -g status-left "#[fg=colour232,bg=colour24,bold] S:#S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] P:#P #[fg=colour240,bg=colour233]"
+set -g status-left "#[fg=colour232,bg=colour25,bold] #H #[fg=colour25,bg=colour240,nobold]#[fg=colour233,bg=colour240] #S #[fg=colour240,bg=colour233]"
 set -g status-right-bg colour233
 set -g status-right-fg colour243
 set -g status-right-length 150
-set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %Y-%m-%d #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
-set -g window-status-format " #I:#W#F "
-set -g window-status-current-format " #I:#W#F "
-set -g window-status-current-bg colour24
-set -g window-status-current-fg colour232
+set -g status-right "#[fg=colour240,bg=colour233]#[fg=colour233,bg=colour240] %H:%M #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] %m/%d(%a)"
+set -g window-status-format " #I:#W "
+set -g window-status-fg white
+set -g window-status-current-format " #I:#W "
+set -g window-status-current-bg colour25
+set -g window-status-current-fg colour15
 set -g window-status-activity-bg colour31
 set -g window-status-activity-fg colour233
 set -g window-status-separator ""
