Add keymap for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set -g status-interval 59
 #set-option -g status-position top
 
 # Copy mode(need `xclip` installed)
+bind C-j copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
