--- a/.bashrc.local.template
+++ b/.bashrc.local.template
@@ -1,8 +1,18 @@
 ## マシン固有の設定を書いて ~/.bashrc.local に置く。
 ## バージョン管理しない。
 
+alias poff='poweroff'
+alias calc='bc -l'
+
+lookup-dic() {
+    cat $1 |LANG=ja_JP.utf-8 less -I -p ^$2
+}
+alias ej='lookup-dic ~/reference/dic-ej.txt'
+alias je='lookup-dic ~/reference/dic-je.txt'
+
 ## Alias for Docker
 if ! win; then
+    alias dksta='systemctl start docker.service'
     alias dkps='docker ps -a --format "table {{.Names}}\t{{.Image}}\t{{.ID}}\t{{.Status}}"'
     alias dkim='docker image ls --format "table {{.Repository}}\t{{.Tag}}\t{{.ID}}\t{{.Size}}"'
     alias dkrm='docker ps --filter "status=exited" --format "{{.ID}}\t{{.Status}}" |grep "weeks ago" |cut -f1 |xargs docker rm'
@@ -16,3 +26,5 @@ if ! win; then
         alias dktty='screen ~/Library/Containers/com.docker.docker/Data/com.docker.driver.amd64-linux/tty'
     fi
 fi
+
+alias dev='cd ~/dev'
