--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "vimfiles/bundle/vim-abolish"]
 	path = vimfiles/bundle/vim-abolish
 	url = git://github.com/tpope/vim-abolish.git
+[submodule "vimfiles/bundle/devdocs.vim"]
+	path = vimfiles/bundle/devdocs.vim
+	url = https://github.com/rhysd/devdocs.vim.git
