Update templates for local config files

--- a/.vifmrc.local.template
+++ b/.vifmrc.local.template
@@ -10,6 +10,16 @@
 
 "bmark! '~/Downloads' download
 "bmark! '~/' home
+"bmark! '~/dev' dev
 "bmark! '/run/media/gpsoft' usbmem
 "bmark! 'C:/Users/gpsoft/Downloads/' download
 "bmark! 'C:/Users/gpsoft/' home
+"bmark! 'C:/Temp/' tmp
+
+"nnoremap ,tl :!svn log %c<cr>
+"nnoremap ,tu :!svn update %c<cr>
+"nnoremap ,td :!svn diff %c<cr>
+"nnoremap ,tb :!svn blame %c<cr>
+"nnoremap ,tL :!svn log %d<cr>
+"nnoremap ,tU :!svn update %d<cr>
+"nnoremap ,tD :!svn diff %d<cr>
