--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "vimfiles/bundle/devdocs.vim"]
 	path = vimfiles/bundle/devdocs.vim
 	url = https://github.com/rhysd/devdocs.vim.git
+[submodule "vimfiles/bundle/vim-tmux-navigator"]
+	path = vimfiles/bundle/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator.git
