--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Prefix key
 unbind-key C-b
-set-option -g prefix C-k
-bind-key C-k send-prefix
+set-option -g prefix C-w
+bind-key C-w send-prefix
 
 # Various options
 setw -g mode-keys vi
@@ -11,34 +11,52 @@ set-option -g base-index 1
 set -g status-interval 59
 #set-option -g status-position top
 
+# Vim detection
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key T if-shell "$is_vim" "send-keys C-w T" "select-pane -R"
+
 # Copy mode(need `xclip` installed)
-bind C-j copy-mode
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'V' send -X select-line
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key C-y copy-mode
+bind-key y copy-mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi C-[ send -X cancel
 
 # Reload config
-bind r source-file ~/.tmux.conf \; display "Config sourced!"
+bind-key r source-file ~/.tmux.conf \; display "Config sourced!"
 
 # Tabs(Windows)
 unbind c
-bind t new-window
+bind-key t new-window
 
 # Panes
 unbind '"'
 unbind %
-bind v split-window -h
-bind s split-window
+bind-key v split-window -h
+bind-key s split-window
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind-key h select-pane -L
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+# bind-key l select-pane -R
+bind-key h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
+bind-key j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
+bind-key k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
+bind-key l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
+bind-key \ if-shell "$is_vim" "send-keys C-w p" "select-pane -l"
+bind-key C-h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
+bind-key C-j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
+bind-key C-k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
+bind-key C-l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
 
-bind p resize-pane -U
-bind n resize-pane -D
-bind > resize-pane -R
-bind < resize-pane -L
+bind-key p resize-pane -U
+bind-key n resize-pane -D
+bind-key P resize-pane -U 2
+bind-key N resize-pane -D 2
+bind-key > resize-pane -R 2
+bind-key < resize-pane -L 2
 
 
 
