Add color and key-bind for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ set-option -g set-titles-string "tmux@#h[#S] #I:#W"
 set-option -g base-index 1
 set -g status-interval 59
 #set-option -g status-position top
+set -g window-style 'fg=colour250,bg=colour234'
+set -g window-active-style 'fg=colour252,bg=black'
 
 # Vim detection
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -45,6 +47,10 @@ bind-key h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
 bind-key j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
 bind-key k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
 bind-key l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
+bind-key H if-shell "$is_vim" "send-keys C-w H"
+bind-key J if-shell "$is_vim" "send-keys C-w J"
+bind-key K if-shell "$is_vim" "send-keys C-w K"
+bind-key L if-shell "$is_vim" "send-keys C-w L"
 bind-key \ if-shell "$is_vim" "send-keys C-w p" "select-pane -l"
 bind-key C-h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
 bind-key C-j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
