--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set-option -g set-titles-string "tmux@#h[#S] #I:#W"
 set-option -g base-index 1
 set -g status-interval 59
 #set-option -g status-position top
-set -g window-style 'fg=colour250,bg=colour234'
-set -g window-active-style 'fg=colour252,bg=black'
+set -g window-style 'fg=colour245,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=colour234'
 
 # Vim detection
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
