--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,7 @@ unbind '"'
 unbind %
 bind-key v split-window -h
 bind-key s split-window
+bind-key C-w resize-pane -x 80
 
 # bind-key h select-pane -L
 # bind-key j select-pane -D
@@ -69,34 +70,25 @@ bind-key < resize-pane -L 2
 # COLOR THEME -----------------------------------
 set -g status-fg colour240
 set -g status-bg colour233
-set -g status-left-bg colour233
-set -g status-left-fg colour243
+set -g status-left-style bg=colour233,fg=colour243
 set -g status-left-length 40
 set -g status-left "#[fg=colour232,bg=colour25,bold] #H #[fg=colour25,bg=colour240,nobold]#[fg=colour233,bg=colour240] #S #[fg=colour240,bg=colour233]"
-set -g status-right-bg colour233
-set -g status-right-fg colour243
+set -g status-right-style bg=colour233,fg=colour243
 set -g status-right-length 150
 set -g status-right "#[fg=colour240,bg=colour233]#[fg=colour233,bg=colour240] %H:%M #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] %m/%d(%a)"
 set -g window-status-format " #I:#W "
-set -g window-status-fg white
+set -g window-status-style fg=white
 set -g window-status-current-format " #I:#W "
-set -g window-status-current-bg colour25
-set -g window-status-current-fg colour15
-set -g window-status-activity-bg colour31
-set -g window-status-activity-fg colour233
+set -g window-status-current-style bg=colour25,fg=colour15
+set -g window-status-activity-style bg=colour31,fg=colour233
 set -g window-status-separator ""
 set -g status-justify centre
-set -g pane-border-bg default
-set -g pane-border-fg colour238
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour24
+set -g pane-border-style bg=default,fg=colour238
+set -g pane-active-border-style bg=default,fg=colour24
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour24
 set -g clock-mode-style 24
-set -g message-bg colour24
-set -g message-fg white
-set -g message-command-bg colour233
-set -g message-command-fg black
-set -g mode-bg colour24
-set -g mode-fg colour231
+set -g message-style bg=colour24,fg=white
+set -g message-command-style bg=colour233,fg=black
+set -g mode-style bg=colour24,fg=colour231
