Fix tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,7 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 bind-key T if-shell "$is_vim" "send-keys C-w T" "select-pane -R"
 
 # Copy mode(need `xclip` installed)
-bind-key C-y copy-mode
-bind-key y copy-mode
+bind-key C-[ copy-mode
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
@@ -61,6 +60,7 @@ bind-key C-j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
 bind-key C-k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
 bind-key C-l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
 bind-key C-w if-shell "$is_vim" "send-keys C-w C-w" "resize-pane -x 80"
+bind-key C-m if-shell "$is_vim" "send-keys C-w C-m"
 
 bind-key p resize-pane -U
 bind-key n resize-pane -D
