--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,8 +83,8 @@ set -g window-status-current-style bg=colour25,fg=colour15
 set -g window-status-activity-style bg=colour31,fg=colour233
 set -g window-status-separator ""
 set -g status-justify centre
-set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border-style bg=default,fg=colour24
+set -g pane-border-style bg=colour236,fg=colour238
+set -g pane-active-border-style bg=colour233,fg=colour24
 set -g display-panes-colour colour233
 set -g display-panes-active-colour colour245
 set -g clock-mode-colour colour24
