--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,9 @@
 [submodule "vimfiles/bundle/investigate.vim"]
 	path = vimfiles/bundle/investigate.vim
 	url = https://github.com/keith/investigate.vim.git
+[submodule "vimfiles/bundle/vim-operator-user"]
+	path = vimfiles/bundle/vim-operator-user
+	url = https://github.com/kana/vim-operator-user
+[submodule "vimfiles/bundle/vim-operator-replace"]
+	path = vimfiles/bundle/vim-operator-replace
+	url = https://github.com/kana/vim-operator-replace
