--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ bind-key H if-shell "$is_vim" "send-keys C-w H"
 bind-key J if-shell "$is_vim" "send-keys C-w J"
 bind-key K if-shell "$is_vim" "send-keys C-w K"
 bind-key L if-shell "$is_vim" "send-keys C-w L"
-bind-key \ if-shell "$is_vim" "send-keys C-w p" "select-pane -l"
+bind-key \\ if-shell "$is_vim" "send-keys C-w p" "select-pane -l"
 bind-key C-h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
 bind-key C-j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
 bind-key C-k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
