--- a/.bashrc.local.template
+++ b/.bashrc.local.template
@@ -29,3 +29,14 @@ fi
 
 alias dev='cd ~/dev'
 alias mutt='neomutt'
+
+man()
+{
+    LESS_TERMCAP_md=$'\e[01;31m' \
+    LESS_TERMCAP_me=$'\e[0m' \
+    LESS_TERMCAP_se=$'\e[0m' \
+    LESS_TERMCAP_so=$'\e[01;44;33m' \
+    LESS_TERMCAP_ue=$'\e[0m' \
+    LESS_TERMCAP_us=$'\e[01;32m' \
+    command man "$@"
+}
