--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "vimfiles/bundle/vim-operator-replace"]
 	path = vimfiles/bundle/vim-operator-replace
 	url = https://github.com/kana/vim-operator-replace
+[submodule "vimfiles/bundle/rainbow"]
+	path = vimfiles/bundle/rainbow
+	url = https://github.com/luochen1990/rainbow.git
